--- a/app/src/main/res/layout/content_result.xml
+++ b/app/src/main/res/layout/content_result.xml
@@ -8,20 +8,102 @@
     tools:context="com.github.tttony3.qrscanner.ResultActivity"
     tools:showIn="@layout/activity_result">
 <TextView
-    android:text="result : "
+    android:text="扫描结果 : "
+    android:textSize="19sp"
     android:id="@+id/tv_result_title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    android:layout_marginTop="8dp" />
-    <TextView
-        android:text="result"
+    android:layout_marginTop="16dp"
+    android:layout_marginLeft="5dp" />
+
+    <EditText
+        android:textSize="18sp"
+        android:hint="输入编号"
         android:id="@+id/tv_result"
+        android:layout_width="153dp"
+        android:layout_height="61dp"
+        app:layout_constraintLeft_toRightOf="@+id/tv_result_title"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="3dp" />
+
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/tv_result_title"
-        android:layout_marginLeft="24dp"
-        app:layout_constraintTop_toTopOf="@+id/tv_result_title"
-        android:layout_marginTop="0dp" />
+        android:text="查询"
+        android:layout_marginRight="-8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="3dp" />
+
+    <ScrollView
+        android:visibility="gone"
+        android:id="@+id/scrollView1"
+        android:layout_width="351dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="9dp"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="351dp"
+            android:layout_height="90dp" />
+    </ScrollView>
+
+    <ScrollView
+        android:visibility="gone"
+        android:id="@+id/scrollView2"
+        android:layout_width="351dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="9dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="351dp"
+            android:layout_height="90dp" />
+    </ScrollView>
+
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="351dp"
+        android:layout_height="90dp"
+        android:visibility="gone"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView4">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="351dp"
+            android:layout_height="90dp"
+
+            />
+    </ScrollView>
+
+    <ScrollView
+        android:id="@+id/scrollView4"
+        android:visibility="gone"
+        android:layout_width="351dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_result">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="351dp"
+            android:layout_height="90dp"
+
+            />
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
